Update Gradle, Update Config